# snakeling

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml  release.yml
src/: README.md
src/snakeling/: README.md  __init__.py  foo.py
tests/: test_foo.py
