[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "snakeling"
description = "A test Python project"
authors = [
    {name = "Nicolas Canceill"},
    {email = "nicolas.canceill@gmail.com"},
]
readme = "src/README.md"
license = {text = "GPL"}
dynamic = ["version"]
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/ncanceill/snakeling"
Documentation = "https://ncanceill.github.io/snakeling"

[project.optional-dependencies]
dev = ["build", "setuptools", "setuptools-scm"]
doc = ["pdoc"]
quality = ["black", "flake8", "Flake8-pyproject", "isort"]
testing = ["mypy", "types-setuptools"]

[tool.black]
exclude = "benv|build|venv"

[tool.flake8]
exclude = ["benv", "build", "venv"]
extend-ignore = ["E203"]

[tool.mypy]
exclude = "benv|build|venv"

[tool.setuptools_scm]
tag_regex = '^(?:v)(?P<version>\d+(?:\.\d+){0,2})'
